2003-09-03  Jakub Steiner <jimmac@ximian.com>

	* 48x48/stock/net/stock_mail_open.png: fix antialiasing
	* 16x16/stock/net/stock_mail.png: make white
	* 32x32/stock/net/stock_mail.png:
	* 48x48/stock/net/stock_mail.png: missing sizes
	* {32x32,48x48}/stock/net/Makefile.am: add icons
	
2003-09-03  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_id.png
	* 24x24/stock/generic/stock_id.png
	* 32x32/stock/generic/stock_id.png
	* 48x48/stock/generic/stock_id.png
	* 16x16/stock/net/stock_inbox.png
	* 24x24/stock/net/stock_inbox.png
	* 32x32/stock/net/stock_inbox.png
	* 48x48/stock/net/stock_inbox.png
	* 16x16/stock/net/stock_outbox.png
	* 24x24/stock/net/stock_outbox.png
	* 32x32/stock/net/stock_outbox.png
	* 48x48/stock/net/stock_outbox.png
	* 16x16/stock/net/stock_sent-mail.png
	* 24x24/stock/net/stock_sent-mail.png
	* 32x32/stock/net/stock_sent-mail.png
	* 48x48/stock/net/stock_sent-mail.png
	* 16x16/stock/{net,generic}/Makefile.am
	* 24x24/stock/{net,generic}/Makefile.am
	* 32x32/stock/{net,generic}/Makefile.am
	* 48x48/stock/{net,generic}/Makefile.am: stock_id and more Evolution icons

2003-09-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 1.0.8

2003-09-02  Gediminas Paulauskas  <menesis@delfi.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2003-08-29  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,32x32,48x48}/stock/document/stock_todo.png:
	* {16x16,24x24,32x32,48x48}/stock/document/Makefile.am: TODO
	* {16x16,24x24,32x32,48x48}/stock/generic/stock_cell-phone.png:
	* {16x16,24x24,32x32,48x48}/stock/generic/Makefile.am: cell phone
	  icon

2003-08-28  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/net/Makefile.am
	* 16x16/stock/net/stock_addressbook.png
	* 24x24/stock/net/Makefile.am
	* 24x24/stock/net/stock_addressbook.png
	* 32x32/stock/net/Makefile.am
	* 32x32/stock/net/stock_addressbook.png
	* 48x48/stock/net/Makefile.am
	* 48x48/stock/net/stock_addressbook.png: addressbook
