@@ -1,5 +1,17 @@
 2003-09-03  Jakub Steiner <jimmac@ximian.com>
 
+	* 16x16/stock/generic/stock_notes.png
+	* 16x16/stock/generic/stock_summary.png
+	* 24x24/stock/generic/stock_notes.png
+	* 24x24/stock/generic/stock_summary.png
+	* 32x32/stock/generic/stock_notes.png
+	* 32x32/stock/generic/stock_summary.png
+	* 48x48/stock/generic/stock_notes.png
+	* 48x48/stock/generic/stock_summary.png
+	* {16x16,24x24,32x32,48x48}/stock/generic/Makefile.am: more Evolution icons
+
+2003-09-03  Jakub Steiner <jimmac@ximian.com>
+
 	* 48x48/stock/net/stock_mail_open.png: fix antialiasing
 	* 16x16/stock/net/stock_mail.png: make white
 	* 32x32/stock/net/stock_mail.png:
